# opengl-test

./: .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  run.sh
include/glad/: glad.h
src/: exercise-00-01-stb-test.cpp  exercise-01-01-basics-triangle.cpp  exercise-01-02-basics-more-triangle.cpp  exercise-01-03-basics-ebo-triangle.cpp  exercise-01-04-basics-triangle-different-fragment.cpp  exercise-02-01-shaders-triangle.cpp  exercise-02-02-shaders-uniform.cpp  exercise-02-03-more-attributes.cpp  exercise-02-04-shaders-inverted-triangle.cpp  exercise-02-05-shaders-uniform-move-triangle.cpp  exercise-02-06-vert-pos-to-frag-color.cpp  exercise-02-vbo-more-triangles.cpp  file_utils.cpp  file_utils.hpp  fileutils.c  fileutils.cpp  glad.c  main.cpp  opengl_utils.cpp  opengl_utils.hpp
src/shaders/: exercise-02-02-shader-fragment.glsl  exercise-02-02-shaders-uniform-vertex.glsl  exercise-02-03-shader-fragment.glsl  exercise-02-03-shader-vertex.glsl  exercise-02-04-shader-vertex.glsl  exercise-02-05-shader-vertex.glsl  exercise-02-06-shader-vertex.glsl  exercise-02-shader-fragment.glsl  fragment_shader_1.glsl
